--- a/package.json
+++ b/package.json
@@ -4,10 +4,8 @@
   "version": "0.0.0",
   "license": "apache-2.0",
   "scripts": {
-    "start": "if-env NODE_ENV=production && npm run -s serve || npm run -s dev",
-    "build": "preact build",
-    "serve": "preact build && preact serve",
-    "dev": "preact watch",
+    "start": "webpack-dev-server --hot",
+    "build": "webpack -p",
     "lint": "eslint src"
   },
   "eslintConfig": {
@@ -20,21 +18,36 @@
     "build/*"
   ],
   "devDependencies": {
+    "awesome-typescript-loader": "^4.0.1",
+    "babel-loader": "^7.1.4",
+    "babel-plugin-jsx-pragmatic": "^1.0.2",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-plugin-transform-react-constant-elements": "^6.23.0",
+    "babel-plugin-transform-react-jsx": "^6.24.1",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.13",
+    "babel-preset-env": "^1.6.1",
+    "css-loader": "^0.28.10",
     "eslint": "^4.18.2",
     "eslint-config-developit": "^1.1.1",
+    "html-webpack-plugin": "^3.0.6",
     "if-env": "^1.0.4",
+    "mini-css-extract-plugin": "^0.2.0",
     "node-sass": "^4.7.2",
-    "preact-cli": "^2.2.1",
-    "sass-loader": "^6.0.6"
+    "sass-loader": "^6.0.7",
+    "typescript-loader": "^1.1.3",
+    "webpack": "^4.1.1",
+    "webpack-cli": "^2.0.10",
+    "webpack-dev-server": "^3.1.0"
   },
   "dependencies": {
     "material-components-web": "^0.31.0",
     "material-radial-progress": "git+https://gist.github.com/02134901c77c5309924bfcf8b4435ebe.git",
     "preact": "^8.2.7",
-    "preact-compat": "^3.18.0",
     "preact-i18n": "^1.2.0",
     "preact-material-components": "^1.3.7",
-    "preact-material-components-drawer": "git+https://gist.github.com/a78fceed440b98e62582e4440b86bfab.git",
     "preact-router": "^2.6.0"
   }
 }
