--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "license": "apache-2.0",
   "scripts": {
-    "start": "webpack-dev-server --hot",
+    "start": "webpack serve --hot --inline",
     "build": "webpack -p",
     "lint": "eslint src"
   },
@@ -18,6 +18,7 @@
     "build/*"
   ],
   "devDependencies": {
+    "@types/node": "^9.4.7",
     "awesome-typescript-loader": "^4.0.1",
     "babel-loader": "^7.1.4",
     "babel-plugin-jsx-pragmatic": "^1.0.2",
@@ -29,25 +30,39 @@
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.13",
     "babel-preset-env": "^1.6.1",
+    "babel-register": "^6.26.0",
+    "copy-webpack-plugin": "^4.5.1",
     "css-loader": "^0.28.10",
+    "ejs-loader": "^0.3.1",
     "eslint": "^4.18.2",
     "eslint-config-developit": "^1.1.1",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "html-webpack-plugin": "^3.0.6",
     "if-env": "^1.0.4",
     "mini-css-extract-plugin": "^0.2.0",
     "node-sass": "^4.7.2",
+    "preact-render-to-string": "^3.7.0",
+    "preload-webpack-plugin": "github:GoogleChromeLabs/preload-webpack-plugin",
     "sass-loader": "^6.0.7",
+    "script-ext-html-webpack-plugin": "^2.0.0",
+    "style-loader": "^0.20.3",
+    "typescript": "^2.7.2",
     "typescript-loader": "^1.1.3",
+    "typings-for-css-modules-loader": "^1.7.0",
     "webpack": "^4.1.1",
-    "webpack-cli": "^2.0.10",
-    "webpack-dev-server": "^3.1.0"
+    "webpack-cli": "^2.0.11",
+    "webpack-dev-server": "^3.1.1",
+    "webpack-plugin-replace": "^1.1.1"
   },
   "dependencies": {
-    "material-components-web": "^0.31.0",
+    "classnames": "^2.2.5",
+    "material-components-web": "^0.32.0",
     "material-radial-progress": "git+https://gist.github.com/02134901c77c5309924bfcf8b4435ebe.git",
     "preact": "^8.2.7",
     "preact-i18n": "^1.2.0",
     "preact-material-components": "^1.3.7",
-    "preact-router": "^2.6.0"
+    "preact-material-components-drawer": "git+https://gist.github.com/a78fceed440b98e62582e4440b86bfab.git",
+    "preact-router": "^2.6.0",
+    "ts-loader": "^4.0.1"
   }
 }
