Add progress bar and bundle analyzer (http://localhost:8080/report.html) to webpack config.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,10 @@
 		"sourceMap": true,
 		"jsx": "react",
 		"jsxFactory": "h",
-		"allowJs": true
+		"allowJs": true,
+		"baseUrl": ".",
+		"paths": {
+			"async!*": ["*"]
+		}
 	}
 }
