--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
   ],
   "devDependencies": {
     "@types/node": "^9.4.7",
-    "awesome-typescript-loader": "^4.0.1",
     "babel-loader": "^7.1.4",
     "babel-plugin-jsx-pragmatic": "^1.0.2",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
@@ -31,6 +30,7 @@
     "babel-plugin-transform-react-remove-prop-types": "^0.4.13",
     "babel-preset-env": "^1.6.1",
     "babel-register": "^6.26.0",
+    "clean-webpack-plugin": "^0.1.19",
     "copy-webpack-plugin": "^4.5.1",
     "css-loader": "^0.28.10",
     "ejs-loader": "^0.3.1",
@@ -43,13 +43,16 @@
     "node-sass": "^4.7.2",
     "preact-render-to-string": "^3.7.0",
     "preload-webpack-plugin": "github:GoogleChromeLabs/preload-webpack-plugin",
+    "progress-bar-webpack-plugin": "^1.11.0",
     "sass-loader": "^6.0.7",
     "script-ext-html-webpack-plugin": "^2.0.0",
     "style-loader": "^0.20.3",
+    "ts-loader": "^4.0.1",
     "typescript": "^2.7.2",
     "typescript-loader": "^1.1.3",
     "typings-for-css-modules-loader": "^1.7.0",
     "webpack": "^4.1.1",
+    "webpack-bundle-analyzer": "^2.11.1",
     "webpack-cli": "^2.0.11",
     "webpack-dev-server": "^3.1.1",
     "webpack-plugin-replace": "^1.1.1"
@@ -62,7 +65,6 @@
     "preact-i18n": "^1.2.0",
     "preact-material-components": "^1.3.7",
     "preact-material-components-drawer": "git+https://gist.github.com/a78fceed440b98e62582e4440b86bfab.git",
-    "preact-router": "^2.6.0",
-    "ts-loader": "^4.0.1"
+    "preact-router": "^2.6.0"
   }
 }
