--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   "eslintConfig": {
     "extends": "eslint-config-developit",
     "rules": {
+      "indent": [
+        2,
+        2
+      ],
       "react/prefer-stateless-function": 0
     }
   },
@@ -37,6 +41,8 @@
     "eslint": "^4.18.2",
     "eslint-config-developit": "^1.1.1",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "fork-ts-checker-notifier-webpack-plugin": "^0.4.0",
+    "fork-ts-checker-webpack-plugin": "^0.4.1",
     "html-webpack-plugin": "^3.0.6",
     "if-env": "^1.0.4",
     "mini-css-extract-plugin": "^0.2.0",
@@ -48,6 +54,9 @@
     "script-ext-html-webpack-plugin": "^2.0.0",
     "style-loader": "^0.20.3",
     "ts-loader": "^4.0.1",
+    "tslint": "^5.9.1",
+    "tslint-config-semistandard": "^7.0.0",
+    "tslint-react": "^3.5.1",
     "typescript": "^2.7.2",
     "typescript-loader": "^1.1.3",
     "typings-for-css-modules-loader": "^1.7.0",
