--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "babel-register": "^6.26.0",
     "clean-webpack-plugin": "^0.1.19",
     "copy-webpack-plugin": "^4.5.1",
-    "css-loader": "^0.28.10",
+    "css-loader": "^0.28.11",
     "ejs-loader": "^0.3.1",
     "eslint": "^4.18.2",
     "eslint-config-developit": "^1.1.1",
@@ -45,13 +45,14 @@
     "fork-ts-checker-webpack-plugin": "^0.4.1",
     "html-webpack-plugin": "^3.0.6",
     "if-env": "^1.0.4",
-    "mini-css-extract-plugin": "^0.2.0",
+    "jsdom": "^11.6.2",
+    "mini-css-extract-plugin": "^0.3.0",
     "node-sass": "^4.7.2",
     "preact-render-to-string": "^3.7.0",
     "preload-webpack-plugin": "github:GoogleChromeLabs/preload-webpack-plugin",
     "progress-bar-webpack-plugin": "^1.11.0",
     "sass-loader": "^6.0.7",
-    "script-ext-html-webpack-plugin": "^2.0.0",
+    "script-ext-html-webpack-plugin": "^2.0.1",
     "style-loader": "^0.20.3",
     "ts-loader": "^4.0.1",
     "tslint": "^5.9.1",
@@ -60,11 +61,12 @@
     "typescript": "^2.7.2",
     "typescript-loader": "^1.1.3",
     "typings-for-css-modules-loader": "^1.7.0",
-    "webpack": "^4.1.1",
+    "webpack": "^4.3.0",
     "webpack-bundle-analyzer": "^2.11.1",
-    "webpack-cli": "^2.0.11",
+    "webpack-cli": "^2.0.13",
     "webpack-dev-server": "^3.1.1",
-    "webpack-plugin-replace": "^1.1.1"
+    "webpack-plugin-replace": "^1.1.1",
+    "workbox-webpack-plugin": "^3.0.1"
   },
   "dependencies": {
     "classnames": "^2.2.5",
