`fork-ts-checker-notifier-webpack-plugin` doesn't use Webpack to look up files, so we need to explicitly feed it a files list via `tsconfig.json`.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,8 @@
 {
   "compileOnSave": false,
+  "files": [
+    "src/**/*.{ts,tsx}"
+  ],
   "compilerOptions": {
     "strict": true,
     "target": "es2017",
