--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "license": "apache-2.0",
   "scripts": {
-    "start": "webpack serve --hot --inline",
+    "start": "webpack serve --hot",
     "build": "webpack -p",
     "lint": "eslint src"
   },
@@ -53,6 +53,7 @@
     "progress-bar-webpack-plugin": "^1.11.0",
     "sass-loader": "^6.0.7",
     "script-ext-html-webpack-plugin": "^2.0.1",
+    "source-map-loader": "^0.2.3",
     "style-loader": "^0.20.3",
     "ts-loader": "^4.0.1",
     "tslint": "^5.9.1",
