--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
         2,
         2
       ],
-      "react/prefer-stateless-function": 0
+      "object-shorthand": 0,
+      "prefer-arrow-callback": 0
     }
   },
   "eslintIgnore": [
@@ -34,8 +35,10 @@
     "babel-plugin-transform-react-remove-prop-types": "^0.4.13",
     "babel-preset-env": "^1.6.1",
     "babel-register": "^6.26.0",
+    "chalk": "^2.3.2",
     "clean-webpack-plugin": "^0.1.19",
     "copy-webpack-plugin": "^4.5.1",
+    "css": "^2.2.1",
     "css-loader": "^0.28.11",
     "ejs-loader": "^0.3.1",
     "eslint": "^4.18.2",
@@ -48,6 +51,8 @@
     "jsdom": "^11.6.2",
     "mini-css-extract-plugin": "^0.3.0",
     "node-sass": "^4.7.2",
+    "nwmatcher": "^1.4.4",
+    "parse5": "^4.0.0",
     "preact-render-to-string": "^3.7.0",
     "preload-webpack-plugin": "github:GoogleChromeLabs/preload-webpack-plugin",
     "progress-bar-webpack-plugin": "^1.11.0",
