--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
         2
       ],
       "object-shorthand": 0,
-      "prefer-arrow-callback": 0
+      "prefer-arrow-callback": 0,
+      "prefer-const": 1
     }
   },
   "eslintIgnore": [
