--- a/package.json
+++ b/package.json
@@ -9,14 +9,19 @@
     "lint": "eslint src"
   },
   "eslintConfig": {
-    "extends": "eslint-config-developit",
+    "extends": [
+      "standard",
+      "standard-jsx"
+    ],
     "rules": {
       "indent": [
         2,
         2
       ],
-      "object-shorthand": 0,
-      "prefer-arrow-callback": 0,
+      "semi": [
+        2,
+        "always"
+      ],
       "prefer-const": 1
     }
   },
@@ -43,7 +48,13 @@
     "css-loader": "^0.28.11",
     "ejs-loader": "^0.3.1",
     "eslint": "^4.18.2",
-    "eslint-config-developit": "^1.1.1",
+    "eslint-config-standard": "^11.0.0",
+    "eslint-config-standard-jsx": "^5.0.0",
+    "eslint-plugin-import": "^2.10.0",
+    "eslint-plugin-node": "^6.0.1",
+    "eslint-plugin-promise": "^3.7.0",
+    "eslint-plugin-react": "^7.7.0",
+    "eslint-plugin-standard": "^3.0.1",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "fork-ts-checker-notifier-webpack-plugin": "^0.4.0",
     "fork-ts-checker-webpack-plugin": "^0.4.1",
