--- a/package.json
+++ b/package.json
@@ -64,9 +64,11 @@
     "mini-css-extract-plugin": "^0.3.0",
     "node-sass": "^4.7.2",
     "nwmatcher": "^1.4.4",
+    "optimize-css-assets-webpack-plugin": "^4.0.0",
     "parse5": "^4.0.0",
     "preact-render-to-string": "^3.7.0",
     "preload-webpack-plugin": "github:GoogleChromeLabs/preload-webpack-plugin",
+    "pretty-bytes": "^4.0.2",
     "progress-bar-webpack-plugin": "^1.11.0",
     "sass-loader": "^6.0.7",
     "script-ext-html-webpack-plugin": "^2.0.1",
