Adds single-pass prerendering via a new `prerender-loader`

--- a/package.json
+++ b/package.json
@@ -60,7 +60,9 @@
     "fork-ts-checker-webpack-plugin": "^0.4.1",
     "html-webpack-plugin": "^3.0.6",
     "if-env": "^1.0.4",
-    "jsdom": "^11.6.2",
+    "jsdom": "^11.5.1",
+    "loader-utils": "^1.1.0",
+    "memory-fs": "^0.4.1",
     "mini-css-extract-plugin": "^0.3.0",
     "node-sass": "^4.7.2",
     "nwmatcher": "^1.4.4",
@@ -70,6 +72,7 @@
     "preload-webpack-plugin": "github:GoogleChromeLabs/preload-webpack-plugin",
     "pretty-bytes": "^4.0.2",
     "progress-bar-webpack-plugin": "^1.11.0",
+    "raw-loader": "^0.5.1",
     "sass-loader": "^6.0.7",
     "script-ext-html-webpack-plugin": "^2.0.1",
     "source-map-loader": "^0.2.3",
