--- a/.babelrc
+++ b/.babelrc
@@ -1,31 +1,35 @@
 {
-	"presets": [
-		[
-			"env",
-			{
-				"loose": true,
-				"uglify": false,
-				"modules": false,
-				"targets": {
-					"browsers": "last 2 versions"
-				},
-				"exclude": [
-					"transform-regenerator",
-					"transform-es2015-typeof-symbol"
-				]
-			}
-		]
-	],
-	"plugins": [
-		"transform-decorators-legacy",
-		"transform-class-properties",
-		"transform-react-constant-elements",
-		"transform-react-remove-prop-types",
-		[
-			"transform-react-jsx",
-			{
-				"pragma": "h"
-			}
-		]
-	]
+  "presets": [
+    [
+      "env",
+      {
+        "loose": true,
+        "uglify": false,
+        "modules": false,
+        "targets": {
+          "browsers": [
+            "last 2 versions",
+            "not android>0",
+            "not ie>0"
+          ]
+        },
+        "exclude": [
+          "transform-regenerator",
+          "transform-es2015-typeof-symbol"
+        ]
+      }
+    ]
+  ],
+  "plugins": [
+    "transform-decorators-legacy",
+    "transform-class-properties",
+    "transform-react-constant-elements",
+    "transform-react-remove-prop-types",
+    [
+      "transform-react-jsx",
+      {
+        "pragma": "h"
+      }
+    ]
+  ]
 }
