--- a/package.json
+++ b/package.json
@@ -41,11 +41,9 @@
     "babel-plugin-transform-react-remove-prop-types": "^0.4.13",
     "babel-preset-env": "^1.6.1",
     "babel-register": "^6.26.0",
-    "chalk": "^2.3.2",
     "clean-webpack-plugin": "^0.1.19",
     "copy-webpack-plugin": "^4.5.1",
     "css-loader": "^0.28.11",
-    "ejs-loader": "^0.3.1",
     "eslint": "^4.18.2",
     "eslint-config-standard": "^11.0.0",
     "eslint-config-standard-jsx": "^5.0.0",
@@ -54,19 +52,13 @@
     "eslint-plugin-promise": "^3.7.0",
     "eslint-plugin-react": "^7.7.0",
     "eslint-plugin-standard": "^3.0.1",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
-    "fork-ts-checker-notifier-webpack-plugin": "^0.4.0",
-    "fork-ts-checker-webpack-plugin": "^0.4.1",
     "html-webpack-plugin": "^3.0.6",
     "if-env": "^1.0.4",
-    "jsdom": "^11.5.1",
     "loader-utils": "^1.1.0",
-    "memory-fs": "^0.4.1",
     "mini-css-extract-plugin": "^0.3.0",
     "node-sass": "^4.7.2",
     "optimize-css-assets-webpack-plugin": "^4.0.0",
-    "preact-render-to-string": "^3.7.0",
-    "preload-webpack-plugin": "github:GoogleChromeLabs/preload-webpack-plugin",
+    "preload-webpack-plugin": "^3.0.0-alpha.3",
     "progress-bar-webpack-plugin": "^1.11.0",
     "raw-loader": "^0.5.1",
     "sass-loader": "^6.0.7",
@@ -78,7 +70,6 @@
     "tslint-config-semistandard": "^7.0.0",
     "tslint-react": "^3.5.1",
     "typescript": "^2.7.2",
-    "typescript-loader": "^1.1.3",
     "typings-for-css-modules-loader": "^1.7.0",
     "webpack": "^4.3.0",
     "webpack-bundle-analyzer": "^2.11.1",
