--- a/package.json
+++ b/package.json
@@ -58,7 +58,6 @@
     "mini-css-extract-plugin": "^0.3.0",
     "node-sass": "^4.7.2",
     "optimize-css-assets-webpack-plugin": "^4.0.0",
-    "preload-webpack-plugin": "^3.0.0-alpha.3",
     "progress-bar-webpack-plugin": "^1.11.0",
     "raw-loader": "^0.5.1",
     "sass-loader": "^6.0.7",
@@ -75,8 +74,7 @@
     "webpack-bundle-analyzer": "^2.11.1",
     "webpack-cli": "^2.0.13",
     "webpack-dev-server": "^3.1.1",
-    "webpack-plugin-replace": "^1.1.1",
-    "workbox-webpack-plugin": "^3.0.1"
+    "webpack-plugin-replace": "^1.1.1"
   },
   "dependencies": {
     "classnames": "^2.2.5",
