--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "start": "webpack serve --host 0.0.0.0 --hot",
     "build": "webpack -p",
     "lint": "eslint src",
-    "test": "npm run build && mocha -R spec && karma start"
+    "test": "npm run build && npm run test:e2e && npm run test:unit",
+    "test:e2e": "mocha -R spec test/e2e",
+    "test:unit": "karmatic"
   },
   "eslintConfig": {
     "extends": [
@@ -26,6 +28,11 @@
         "always"
       ],
       "prefer-const": 1
+    },
+    "settings": {
+      "react": {
+        "pragma": "h"
+      }
     }
   },
   "eslintIgnore": [
@@ -71,6 +78,7 @@
     "karma-chrome-launcher": "^2.2.0",
     "karma-mocha": "^1.3.0",
     "karma-typescript": "^3.0.12",
+    "karmatic": "^1.1.7",
     "loader-utils": "^1.1.0",
     "mini-css-extract-plugin": "^0.3.0",
     "mocha": "^5.2.0",
