--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: node_js
 node_js:
 - node
 cache: npm
-script: npm run build
+script: npm run build || npm run build
 deploy:
   provider: firebase
   project: squoosh-beta-ci # change this when when PR
