--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "@types/node": "^9.6.23",
+    "@types/pretty-bytes": "^5.1.0",
     "@types/webassembly-js-api": "0.0.1",
     "babel-loader": "^7.1.5",
     "babel-plugin-jsx-pragmatic": "^1.0.2",
@@ -66,11 +67,13 @@
     "classnames": "^2.2.6",
     "comlink": "^3.0.3",
     "comlink-loader": "^1.0.0",
-    "filesize": "^3.6.1",
+    "gzip-size": "^5.0.0",
     "material-components-web": "^0.32.0",
+    "pako": "^1.0.6",
     "preact": "^8.2.9",
     "preact-i18n": "^1.2.2",
     "preact-material-components": "^1.4.7",
-    "preact-router": "^2.6.1"
+    "preact-router": "^2.6.1",
+    "pretty-bytes": "^5.1.0"
   }
 }
