--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/node": "^9.6.23",
     "@types/pretty-bytes": "^5.1.0",
     "@types/webassembly-js-api": "0.0.1",
+    "@webcomponents/custom-elements": "^1.2.0",
     "babel-loader": "^7.1.5",
     "babel-plugin-jsx-pragmatic": "^1.0.2",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
