--- a/codecs/imagequant/package.json
+++ b/codecs/imagequant/package.json
@@ -2,11 +2,7 @@
   "name": "imagequant",
   "scripts": {
     "install": "napa",
-    "build": "npm run build:wasm",
-    "build:wasm:lib": "docker run --rm -v $(pwd):/src trzeci/emscripten emcc --bind -O3 -s ALLOW_MEMORY_GROWTH=1 -s MODULARIZE=1 -s 'EXPORT_NAME=\"imagequant\"' -I node_modules/libimagequant --std=c99 node_modules/libimagequant/{libimagequant,pam,mediancut,blur,mempool,kmeans,nearest}.c -c ",
-    "build:wasm:module": "docker run --rm -v $(pwd):/src trzeci/emscripten emcc --bind -O3 -s ALLOW_MEMORY_GROWTH=1 -s MODULARIZE=1 -s 'EXPORT_NAME=\"imagequant\"' -I node_modules/libimagequant -o ./imagequant.js --std=c++11 *.o -x c++ imagequant.cpp",
-    "build:wasm": "npm run build:wasm:lib && npm run build:wasm:module"
-
+    "build": "docker run --rm -v $(pwd):/src trzeci/emscripten ./build.sh"
   },
   "napa": {
     "libimagequant": "ImageOptim/libimagequant#2.12.1"
