--- a/package.json
+++ b/package.json
@@ -67,8 +67,9 @@
     "classnames": "^2.2.6",
     "comlink": "^3.0.3",
     "comlink-loader": "^1.0.0",
-    "preact": "^8.3.1",
     "linkstate": "^1.1.1",
-    "pretty-bytes": "^5.1.0"
+    "preact": "^8.3.1",
+    "pretty-bytes": "^5.1.0",
+    "worker-plugin": "^1.1.1"
   }
 }
