#199 - Removes the file-drop custom element
+ Removes the custom element from the project
+ Replaces it with the externally maintined custom element

--- a/package.json
+++ b/package.json
@@ -65,8 +65,9 @@
     "classnames": "^2.2.6",
     "comlink": "^3.0.3",
     "comlink-loader": "^1.0.0",
-    "preact": "^8.3.1",
+    "file-drop-element": "0.0.2",
     "linkstate": "^1.1.1",
+    "preact": "^8.3.1",
     "pretty-bytes": "^5.1.0"
   }
 }
