#199 - Removes the file-drop custom element
+ Removes the custom element from the project
+ Replaces it with the externally maintined custom element

--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "linkstate": "^1.1.1",
     "preact": "^8.3.1",
     "pretty-bytes": "^5.1.0",
-    "worker-plugin": "^1.1.1"
+    "worker-plugin": "^1.1.1",
+    "file-drop-element": "0.0.2"
   }
 }
