Updating based on changes to filedrop element.

--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     }
   },
   "devDependencies": {
-    "@types/node": "^9.6.23",
+    "@types/node": "^9.6.35",
     "@types/pretty-bytes": "^5.1.0",
     "@types/webassembly-js-api": "0.0.1",
-    "@webcomponents/custom-elements": "^1.2.0",
+    "@webcomponents/custom-elements": "^1.2.1",
     "babel-loader": "^7.1.5",
     "babel-plugin-jsx-pragmatic": "^1.0.2",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
@@ -27,20 +27,20 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-react-constant-elements": "^6.23.0",
     "babel-plugin-transform-react-jsx": "^6.24.1",
-    "babel-plugin-transform-react-remove-prop-types": "^0.4.14",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.19",
     "babel-preset-env": "^1.7.0",
     "babel-register": "^6.26.0",
     "clean-webpack-plugin": "^0.1.19",
-    "copy-webpack-plugin": "^4.5.2",
+    "copy-webpack-plugin": "^4.5.3",
     "css-loader": "^0.28.11",
     "exports-loader": "^0.7.0",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
-    "husky": "^1.0.0-rc.13",
+    "husky": "^1.1.2",
     "if-env": "^1.0.4",
     "loader-utils": "^1.1.0",
     "mini-css-extract-plugin": "^0.3.0",
-    "node-sass": "^4.9.3",
+    "node-sass": "^4.9.4",
     "optimize-css-assets-webpack-plugin": "^4.0.3",
     "progress-bar-webpack-plugin": "^1.11.0",
     "raw-loader": "^0.5.1",
@@ -55,7 +55,7 @@
     "tslint-react": "^3.6.0",
     "typescript": "^2.9.2",
     "typings-for-css-modules-loader": "^1.7.0",
-    "webpack": "^4.19.1",
+    "webpack": "=4.19.1",
     "webpack-bundle-analyzer": "^2.13.1",
     "webpack-cli": "^2.1.5",
     "webpack-dev-server": "^3.1.5",
@@ -66,6 +66,6 @@
     "preact": "^8.3.1",
     "pretty-bytes": "^5.1.0",
     "worker-plugin": "^1.1.1",
-    "file-drop-element": "0.0.2"
+    "file-drop-element": "0.0.6"
   }
 }
