--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "clean-webpack-plugin": "^0.1.19",
     "comlink": "^3.0.3",
     "copy-webpack-plugin": "^4.5.3",
+    "critters-webpack-plugin": "^2.0.1",
     "css-loader": "^0.28.11",
     "exports-loader": "^0.7.0",
     "file-drop-element": "0.0.7",
@@ -44,12 +45,13 @@
     "if-env": "^1.0.4",
     "linkstate": "^1.1.1",
     "loader-utils": "^1.1.0",
-    "mini-css-extract-plugin": "^0.3.0",
-    "node-sass": "^4.9.4",
-    "optimize-css-assets-webpack-plugin": "^4.0.3",
     "pointer-tracker": "^2.0.3",
     "minimatch": "^3.0.4",
+    "mini-css-extract-plugin": "^0.4.4",
+    "node-sass": "^4.9.4",
+    "optimize-css-assets-webpack-plugin": "^4.0.3",
     "preact": "^8.3.1",
+    "prerender-loader": "^1.2.0",
     "pretty-bytes": "^5.1.0",
     "progress-bar-webpack-plugin": "^1.11.0",
     "raw-loader": "^0.5.1",
