--- a/src/manifest.json
+++ b/src/manifest.json
@@ -5,7 +5,7 @@
   "display": "standalone",
   "orientation": "portrait",
   "background_color": "#fff",
-  "theme_color": "#673ab8",
+  "theme_color": "#f78f21",
   "icons": [
     {
       "src": "/assets/icon-large.png",
