Splitting PointerTracker into its own project

--- a/package.json
+++ b/package.json
@@ -30,18 +30,25 @@
     "babel-plugin-transform-react-remove-prop-types": "^0.4.19",
     "babel-preset-env": "^1.7.0",
     "babel-register": "^6.26.0",
+    "classnames": "^2.2.6",
     "clean-webpack-plugin": "^0.1.19",
+    "comlink": "^3.0.3",
     "copy-webpack-plugin": "^4.5.3",
     "css-loader": "^0.28.11",
     "exports-loader": "^0.7.0",
+    "file-drop-element": "0.0.7",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^1.1.2",
     "if-env": "^1.0.4",
+    "linkstate": "^1.1.1",
     "loader-utils": "^1.1.0",
     "mini-css-extract-plugin": "^0.3.0",
     "node-sass": "^4.9.4",
     "optimize-css-assets-webpack-plugin": "^4.0.3",
+    "pointer-tracker": "^2.0.3",
+    "preact": "^8.3.1",
+    "pretty-bytes": "^5.1.0",
     "progress-bar-webpack-plugin": "^1.11.0",
     "raw-loader": "^0.5.1",
     "sass-loader": "^7.1.0",
@@ -60,12 +67,6 @@
     "webpack-cli": "^2.1.5",
     "webpack-dev-server": "^3.1.5",
     "webpack-plugin-replace": "^1.1.1",
-    "classnames": "^2.2.6",
-    "comlink": "^3.0.3",
-    "linkstate": "^1.1.1",
-    "preact": "^8.3.1",
-    "pretty-bytes": "^5.1.0",
-    "worker-plugin": "^1.1.1",
-    "file-drop-element": "0.0.7"
+    "worker-plugin": "^1.1.1"
   }
 }
