--- a/src/manifest.json
+++ b/src/manifest.json
@@ -8,9 +8,9 @@
   "theme_color": "#673ab8",
   "icons": [
     {
-      "src": "/assets/icon.png",
+      "src": "/assets/icon-large.png",
       "type": "image/png",
-      "sizes": "512x512"
+      "sizes": "1024x1024"
     }
   ]
 }
