Generate `_headers` and `_redirects` by passing assets through ejs templates.

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/pretty-bytes": "^5.1.0",
     "@types/webassembly-js-api": "0.0.1",
     "@webcomponents/custom-elements": "^1.2.1",
+    "assets-webpack-plugin": "^3.9.7",
     "babel-loader": "^7.1.5",
     "babel-plugin-jsx-pragmatic": "^1.0.2",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
@@ -36,6 +37,7 @@
     "copy-webpack-plugin": "^4.5.3",
     "critters-webpack-plugin": "^2.0.1",
     "css-loader": "^0.28.11",
+    "ejs": "^2.6.1",
     "exports-loader": "^0.7.0",
     "file-drop-element": "^0.0.9",
     "file-loader": "^1.1.11",
