--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^1.1.2",
+    "idb-keyval": "^3.1.0",
     "if-env": "^1.0.4",
     "linkstate": "^1.1.1",
     "loader-utils": "^1.1.0",
@@ -47,6 +48,7 @@
     "node-sass": "^4.9.4",
     "optimize-css-assets-webpack-plugin": "^4.0.3",
     "pointer-tracker": "^2.0.3",
+    "minimatch": "^3.0.4",
     "preact": "^8.3.1",
     "pretty-bytes": "^5.1.0",
     "progress-bar-webpack-plugin": "^1.11.0",
@@ -62,7 +64,8 @@
     "tslint-react": "^3.6.0",
     "typescript": "^2.9.2",
     "typings-for-css-modules-loader": "^1.7.0",
-    "webpack": "=4.19.1",
+    "url-loader": "^1.1.2",
+    "webpack": "^4.19.1",
     "webpack-bundle-analyzer": "^2.13.1",
     "webpack-cli": "^2.1.5",
     "webpack-dev-server": "^3.1.5",
