--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "copy-webpack-plugin": "^4.5.3",
     "css-loader": "^0.28.11",
     "exports-loader": "^0.7.0",
-    "file-drop-element": "0.0.7",
+    "file-drop-element": "^0.0.9",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^1.1.2",
