--- a/package.json
+++ b/package.json
@@ -47,11 +47,12 @@
     "if-env": "^1.0.4",
     "linkstate": "^1.1.1",
     "loader-utils": "^1.1.0",
-    "pointer-tracker": "^2.0.3",
-    "minimatch": "^3.0.4",
     "mini-css-extract-plugin": "^0.4.4",
+    "minimatch": "^3.0.4",
     "node-sass": "^4.9.4",
     "optimize-css-assets-webpack-plugin": "^4.0.3",
+    "pinch-zoom-element": "^1.0.0",
+    "pointer-tracker": "^2.0.3",
     "preact": "^8.3.1",
     "prerender-loader": "^1.2.0",
     "pretty-bytes": "^5.1.0",
