Upgrade devDependcies. Replace UglifyJS ⚰ with TerserJS 👶 Fix TypeScript compiler errors

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,8 @@
     "moduleResolution": "node",
     "experimentalDecorators": true,
     "noUnusedLocals": true,
+    "strictNullChecks": false,
+    "noImplicitAny": false,
     "sourceMap": true,
     "jsx": "react",
     "jsxFactory": "h",
