Specify lib for TypeScript
This makes the typings work if you are in a worker, which the
`processor-worker` is.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,8 @@
     "jsx": "react",
     "jsxFactory": "h",
     "allowJs": false,
-    "baseUrl": "."
+    "baseUrl": ".",
+    "lib": ["dom", "webworker", "esnext"],
   },
   "exclude": ["src/sw/**/*"]
 }
