AssemblyScript version works

--- a/codecs/rotate/tsconfig.json
+++ b/codecs/rotate/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "../node_modules/assemblyscript/std/assembly.json",
+  "extends": "./node_modules/assemblyscript/std/assembly.json",
   "include": [
     "./**/*.ts"
   ]
