Almost ready, so switching to real name

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Squoosh Share Target Demo",
-  "short_name": "Squoosh ST",
+  "name": "Squoosh",
+  "short_name": "Squoosh",
   "start_url": "/",
   "display": "standalone",
   "orientation": "any",
