--- a/codecs/rotate/package.json
+++ b/codecs/rotate/package.json
@@ -3,7 +3,7 @@
   "scripts": {
     "build:image": "docker build -t squoosh-rotate .",
     "build": "docker run --rm -v $(pwd):/src squoosh-rotate ./build.sh",
-    "benchmark": "echo File size after gzip && npm run benchmark:filesize && echo Baseline && npm run benchmark:baseline && echo Optimizing && npm run benchmark:optimizing",
+    "benchmark": "echo File size after gzip && npm run benchmark:filesize && echo Optimizing && npm run -s benchmark:optimizing",
     "benchmark:baseline": "v8 --liftoff --no-wasm-tier-up --no-opt ./benchmark.js",
     "benchmark:optimizing": "v8 --no-liftoff --no-wasm-tier-up ./benchmark.js",
     "benchmark:filesize": "cat rotate.wasm | gzip -c9n | wc -c"
