--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
     "@webcomponents/custom-elements": "1.2.1",
     "@webpack-cli/serve": "0.1.3",
     "assets-webpack-plugin": "3.9.7",
-    "chokidar": "2.1.2",
     "chalk": "2.4.2",
+    "chokidar": "2.1.2",
     "classnames": "2.2.6",
     "clean-webpack-plugin": "1.0.1",
-    "comlink": "3.1.1",
+    "comlink": "^3.2.0",
     "copy-webpack-plugin": "5.0.0",
     "critters-webpack-plugin": "2.3.0",
     "css-loader": "1.0.1",
