--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "gzip-size": "5.0.0",
     "html-webpack-plugin": "3.2.0",
     "husky": "1.3.1",
+    "intersection-observer": "^0.5.1",
     "idb-keyval": "3.1.0",
     "linkstate": "1.1.1",
     "loader-utils": "1.2.3",
