--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "webpack-dev-server --host 0.0.0.0 --hot",
     "build": "webpack -p",
     "lint": "tslint -c tslint.json  -p tsconfig.json -t verbose",
-    "lintfix": "tslint -c tslint.json -p tsconfig.json -t verbose --fix 'src/**/*.{ts,tsx,js,jsx}'",
+    "lintfix": "tslint -c tslint.json -p tsconfig.json -t verbose --fix '{src,config,codecs}/**/*.{ts,tsx,js,jsx}' '*.d.ts'",
     "sizereport": "node config/size-report.js"
   },
   "husky": {
