Using travis-size-report

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "webpack -p",
     "lint": "tslint -c tslint.json  -p tsconfig.json -t verbose",
     "lintfix": "tslint -c tslint.json -p tsconfig.json -t verbose --fix 'src/**/*.{ts,tsx,js,jsx}'",
-    "sizereport": "node config/size-report.js"
+    "sizereport": "sizereport --config"
   },
   "husky": {
     "hooks": {
@@ -22,8 +22,8 @@
     "@webcomponents/custom-elements": "1.2.4",
     "@webpack-cli/serve": "0.1.5",
     "assets-webpack-plugin": "3.9.10",
-    "chokidar": "3.0.0",
     "chalk": "2.4.2",
+    "chokidar": "3.0.0",
     "classnames": "2.2.6",
     "clean-webpack-plugin": "1.0.1",
     "comlink": "3.1.1",
@@ -58,6 +58,7 @@
     "source-map-loader": "0.2.4",
     "style-loader": "0.23.1",
     "terser-webpack-plugin": "1.2.4",
+    "travis-size-report": "^1.0.1",
     "ts-loader": "6.0.1",
     "tslint": "5.16.0",
     "tslint-config-airbnb": "5.11.1",
