--- a/codecs/hqx/Cargo.toml
+++ b/codecs/hqx/Cargo.toml
@@ -3,11 +3,8 @@ name = "squooshhqx"
 version = "0.1.0"
 authors = ["Surma <surma@surma.link>"]
 
-# [bin]
-
-# [lib]
-#crate-type = ["cdylib", "rlib"]
-# crate-type = ["cdylib"]
+[lib]
+crate-type = ["cdylib"]
 
 [features]
 default = ["console_error_panic_hook", "wee_alloc"]
