Optimising wasm so it doesn't break Chrome

--- a/codecs/hqx/Dockerfile
+++ b/codecs/hqx/Dockerfile
@@ -1,7 +1,12 @@
 FROM ubuntu
 RUN apt-get update && \
-  apt-get install -qqy git build-essential cmake python2.7
-RUN git clone --recursive https://github.com/WebAssembly/wabt /usr/src/wabt
+  apt-get install -qqy git build-essential cmake python2.7 python
+
+RUN git clone --depth 1 --recursive https://github.com/WebAssembly/binaryen.git /usr/src/binaryen
+WORKDIR /usr/src/binaryen
+RUN cmake . && make wasm-opt
+
+RUN git clone --depth 1 --recursive https://github.com/WebAssembly/wabt /usr/src/wabt
 RUN mkdir -p /usr/src/wabt/build
 WORKDIR /usr/src/wabt/build
 RUN cmake .. -DCMAKE_INSTALL_PREFIX=/opt/wabt && \
@@ -14,5 +19,6 @@ RUN rustup install nightly && \
   cargo install wasm-pack
 
 COPY --from=0 /opt/wabt /opt/wabt
-ENV PATH="/opt/wabt/bin:${PATH}"
+COPY --from=0 /usr/src/binaryen /usr/src/binaryen
+ENV PATH="/opt/wabt/bin:/usr/src/binaryen/bin:${PATH}"
 WORKDIR /src
