Simpler dockerfile (thanks surma!)

--- a/codecs/hqx/Dockerfile
+++ b/codecs/hqx/Dockerfile
@@ -1,10 +1,6 @@
 FROM ubuntu
 RUN apt-get update && \
-  apt-get install -qqy git build-essential cmake python2.7 python
-
-RUN git clone --depth 1 --recursive https://github.com/WebAssembly/binaryen.git /usr/src/binaryen
-WORKDIR /usr/src/binaryen
-RUN cmake . && make wasm-opt
+  apt-get install -qqy git build-essential cmake python2.7
 
 RUN git clone --depth 1 --recursive https://github.com/WebAssembly/wabt /usr/src/wabt
 RUN mkdir -p /usr/src/wabt/build
@@ -19,6 +15,7 @@ RUN rustup install nightly && \
   cargo install wasm-pack
 
 COPY --from=0 /opt/wabt /opt/wabt
-COPY --from=0 /usr/src/binaryen /usr/src/binaryen
-ENV PATH="/opt/wabt/bin:/usr/src/binaryen/bin:${PATH}"
+RUN mkdir /opt/binaryen && \
+ curl -L https://github.com/WebAssembly/binaryen/releases/download/1.38.32/binaryen-1.38.32-x86-linux.tar.gz  | tar -xzf - -C /opt/binaryen --strip 1
+ENV PATH="/opt/binaryen:/opt/wabt/bin:${PATH}"
 WORKDIR /src
