Switch to stable Rust
Nightly is no longer necessary for wee_alloc, so we don't need to rely on unstable versions of Rust anymore.

As a bonus, this reduces size of each Rust-related Docker image by >1 GB:
 - `squoosh-rotate`: 2.94GB -> 1.87GB
 - `squoosh-resize`: 3.09GB -> 2.02GB
 - `squoosh-hqx`: 3.13GB -> 2.06GB

--- a/codecs/rotate/Dockerfile
+++ b/codecs/rotate/Dockerfile
@@ -9,8 +9,7 @@ RUN cmake .. -DCMAKE_INSTALL_PREFIX=/opt/wabt && \
   make install
 
 FROM rust
-RUN rustup install nightly && \
-  rustup target add --toolchain nightly wasm32-unknown-unknown
+RUN rustup target add wasm32-unknown-unknown
 
 COPY --from=0 /opt/wabt /opt/wabt
 ENV PATH="/opt/wabt/bin:${PATH}"
