--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "start": "webpack-dev-server --host 0.0.0.0 --hot",
     "build": "webpack -p",
-    "lint": "tslint -c tslint.json  -p tsconfig.json -t verbose",
-    "lintfix": "tslint -c tslint.json -p tsconfig.json -t verbose --fix 'src/**/*.{ts,tsx,js,jsx}'",
+    "lint": "eslint \"src/**/*.{ts,tsx,js,jsx}\"",
+    "lintfix": "eslint --fix \"src/**/*.{ts,tsx,js,jsx}\"",
     "sizereport": "sizereport --config"
   },
   "husky": {
@@ -19,6 +19,8 @@
     "@types/node": "10.14.15",
     "@types/pretty-bytes": "5.1.0",
     "@types/webassembly-js-api": "0.0.3",
+    "@typescript-eslint/eslint-plugin": "^2.2.0",
+    "@typescript-eslint/parser": "^2.2.0",
     "@webcomponents/custom-elements": "1.2.4",
     "@webpack-cli/serve": "0.1.8",
     "assets-webpack-plugin": "3.9.10",
@@ -32,6 +34,11 @@
     "css-loader": "1.0.1",
     "ejs": "2.6.2",
     "escape-string-regexp": "2.0.0",
+    "eslint": "^6.4.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.14.3",
     "exports-loader": "0.7.0",
     "file-drop-element": "0.2.0",
     "file-loader": "4.2.0",
@@ -60,10 +67,6 @@
     "terser-webpack-plugin": "1.4.1",
     "travis-size-report": "1.1.0",
     "ts-loader": "6.0.3",
-    "tslint": "5.19.0",
-    "tslint-config-airbnb": "5.11.1",
-    "tslint-config-semistandard": "8.0.1",
-    "tslint-react": "4.0.0",
     "typed-css-modules": "0.4.2",
     "typescript": "3.5.3",
     "url-loader": "2.1.0",
