enable stricter compilation options

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,9 @@
     "moduleResolution": "node",
     "experimentalDecorators": true,
     "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noFallthroughCasesInSwitch": true,
+    "noImplicitReturns": true,
     "sourceMap": true,
     "jsx": "react",
     "jsxFactory": "h",
