--- a/codecs/oxipng/Cargo.toml
+++ b/codecs/oxipng/Cargo.toml
@@ -11,6 +11,7 @@ crate-type = ["cdylib"]
 [dependencies]
 oxipng = { version = "2.3.0", default-features = false }
 wasm-bindgen = "0.2.48"
+log = { version = "0.4", features = ["release_max_level_off"] }
 
 [profile.release]
 lto = true
