--- a/codecs/oxipng/Cargo.toml
+++ b/codecs/oxipng/Cargo.toml
@@ -13,9 +13,12 @@ oxipng = { version = "3.0.0", default-features = false, features = ["parallel"] 
 wasm-bindgen = "0.2.64"
 log = { version = "0.4", features = ["release_max_level_off"] }
 rayon = "1.3.0"
-js-sys = "0.3.37"
-console_log = "0.2.0"
+crossbeam-deque = "0.7.3"
+once_cell = "1.3.1"
 
 [profile.release]
 lto = true
 opt-level = "s"
+
+[package.metadata.wasm-pack.profile.release]
+wasm-opt = ["-O", "--no-validation"]
